@@ -21,6 +21,7 @@ frostwire (4.21.4) stable; urgency=low
   * Updated Mojito DHT integration. Mojito DHT is now active.
   * Upgraded anti-spam mechanisms.
   * Removed all remnant code related to LimeWire Store.
+  * Cleanup to use a single logging library.
 	
  -- FrostWire Team <contact@frostwire.com>  Fri, 21 Jan 2011 20:00:00 -0500
 
